Http-client-branch: 8194729: Java 9's HttpClient doesn't allow custom 'Authorization' headers